--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.2",
     "@react-google-maps/api": "^2.19.2",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
